--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -84,6 +84,12 @@
 			border-radius: 50%;
 			padding: 0.25px 10px;
 			font-size: 12px;
+			@media (min-width: $lg) {
+				right:15.5%;
+				padding: 0px 10px;
+				top: 15px;
+			}
 		  }
+
 	}
 }
