styling issues fixed

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,7 +1,7 @@
 @import '../styles/main';
 
 .footer-section {
-	padding: 80px 0;
+	padding: 80px 0 10px 0;
 	background: $white;
 	.relative {
 		position: relative;
