--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -4,10 +4,10 @@
 	background: $primary;
 	padding: calc(4rem - 30px) 0 0rem 0;
 	@media (min-width: $md) {
-		padding: calc(4rem - 30px) 0 4rem 0;
+		padding: calc(4rem - 30px) 0;
 	}
 	@media (min-width: $lg) {
-		padding: calc(8rem - 30px) 0 8rem 0;
+		padding: calc(8rem - 30px) 0;
 	}
 	
 	.intro-excerpt {
@@ -40,21 +40,26 @@
 			z-index: 2;
 			max-width: 780px;
 			left: -20px;
+			@media (max-width: $sm) {
+display: none;
+			}
 			@media (min-width: $md) {
 				right: 0px;
-				left: -100px;
-
+				left: 50px;
+				top: 110px;
+				max-width: 600px;
 			}
 			@media (min-width: $lg) {
-				left: 0px;
-				top: -80px;
+				left: -40px;
+				top: -10px;
 				position: absolute;
-				right: -50px;
+				right: 30px;
+				max-width: 600px;
 			}
 			@media (min-width: $xl) {
 				left: 0px;
 				top: -80px;
-		
+				max-width: 750px;
 				right: -100px;
 			}
 			
@@ -69,8 +74,21 @@
 			background-repeat: no-repeat;
 			right: -100px;
 			top: -0px;
+			@media (max-width: $sm) {
+display: none;
+			}
+			@media (min-width: $md) {
+				top: 100px;
+				right: 20px;
+				width: 200px;
+			}	
+			@media (min-width: $lg) {
+				top: -10px;
+				right: -20px;
+			}			
 			@media (min-width: $xl) {
 				top: -40px;
+				right: -80px;
 			}
 		}
 	}
