--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -77,19 +77,49 @@
 		}
 		.cart-count {
 			position: absolute;
-			top: 7px;
-			right: 6.75%;
+			top: 5px; /* Adjust this to align vertically */
+			right: 5px; /* Adjust for smaller screens */
 			background-color: red;
 			color: white;
 			border-radius: 50%;
-			padding: 0.25px 10px;
+			padding: 0.25rem 0.5rem; /* Padding adjustments for better circle size */
 			font-size: 12px;
+			line-height: 1;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			
+			@media (min-width: $sm) {
+			  top: 18px;
+			  right: 50px;
+			}
+		  
+			@media (min-width: $md) {
+			  top: 18px;
+			  right: 55px;
+			  font-size: 13px; /* Slightly larger on medium screens */
+			}
+		  
 			@media (min-width: $lg) {
-				right:15.5%;
-				padding: 0px 10px;
-				top: 15px;
+			  top: 18px;
+			  right: 60px; /* Move right to align better on large screens */
+			  font-size: 13px;
+			}
+		  
+			@media (min-width: $xl) {
+			  top: 20px;
+			  right: 65px; /* More spacing on larger screens */
+			  font-size: 14px;
+			}
+		  
+			@media (min-width: $xxl) {
+			  top: 20px;
+			  right: 70px;
+			  font-size: 14px;
 			}
 		  }
+		  
+		  
 
 	}
 }
