--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -4,6 +4,7 @@
 	background: $primary!important;
 	padding-top: 20px;
 	padding-bottom: 20px;
+
 	.navbar-brand {
 		font-size: 32px;
 		font-weight: 600;
@@ -11,6 +12,7 @@
 			opacity: .4;
 		}
 	}
+
 	.navbar-toggler {
 		border-color: transparent;
 		&:active, &:focus {
@@ -18,50 +20,56 @@
 			outline: none;
 		}
 	}
+
 	.custom-navbar-nav {
 		li {
 			@media (min-width: $lg) {
 				margin-left: 15px;
 				margin-right: 15px;
 			}
-			a {
-				font-weight: 500;
-				color: $white!important;
-				opacity: .5;
-				transition: .3s all ease;
-				position: relative;
-				&:before {
-					@media (min-width: $md) {
-						content: "";
-						position: absolute;
-						bottom: 0;
-						left: 8px;
-						right: 8px;
-						background: $secondary;
-						height: 5px;
-						opacity: 1;
-						visibility: visible;
-						width: 0;
-						transition: .15s all ease-out;
-					}
-				}
-				&:hover {
+		
+
+		a {
+			font-weight: 500;
+			color: $white!important;
+			opacity: .5;
+			transition: .3s all ease;
+			position: relative;
+
+			&:before {
+				@media (min-width: $md) {
+					content: "";
+					position: absolute;
+					bottom: 0;
+					left: 8px;
+					right: 8px;
+					background: $secondary;
+					height: 5px;
 					opacity: 1;
-					&:before {
-						width: calc(100% - 16px);
-					}
+					visibility: visible;
+					width: 0;
+					transition: .15s all ease-out;
 				}
 			}
+
+			&:hover {
+				opacity: 1;
+				&:before {
+					width: calc(100% - 16px);
+				}
+			}
+
 			&.active {
-				a {
-					opacity: 1;
-					&:before {
-						width: calc(100% - 16px);
-					}
+				opacity: 1;
+
+				&:before {
+					width: calc(100% - 16px);
 				}
 			}
 		}
 	}
+}
+
 	.custom-navbar-cta {
 		margin-left: 0!important;
 		flex-direction: row;
@@ -75,51 +83,56 @@
 				margin-right: 20px;
 			}
 		}
+		.nav-item {
+			position: relative;
 		.cart-count {
 			position: absolute;
-			top: 5px; /* Adjust this to align vertically */
-			right: 5px; /* Adjust for smaller screens */
-			background-color: red;
-			color: white;
+			top: 5%; 
+			right: 4vw;
+			background-color: $red;
+			color: $white;
 			border-radius: 50%;
-			padding: 0.25rem 0.5rem; /* Padding adjustments for better circle size */
-			font-size: 12px;
+			padding: 0.25rem 0.5rem;
+			font-size: 1em;
 			line-height: 1;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			
-			@media (min-width: $sm) {
-			  top: 18px;
-			  right: 50px;
-			}
-		  
-			@media (min-width: $md) {
-			  top: 18px;
-			  right: 55px;
-			  font-size: 13px; /* Slightly larger on medium screens */
-			}
-		  
-			@media (min-width: $lg) {
-			  top: 18px;
-			  right: 60px; /* Move right to align better on large screens */
-			  font-size: 13px;
-			}
-		  
-			@media (min-width: $xl) {
-			  top: 20px;
-			  right: 65px; /* More spacing on larger screens */
-			  font-size: 14px;
-			}
-		  
-			@media (min-width: $xxl) {
-			  top: 20px;
-			  right: 70px;
-			  font-size: 14px;
-			}
-		  }
-		  
-		  
 
-	}
-}
+			@media (min-width: $sm) {
+				top: 8%;
+				right: 1vw;
+			}
+	
+			@media (min-width: $md) {
+				top: 8%;
+				right: 1.75vw;
+				font-size: 1.1em; 
+			}
+	
+			@media (min-width: $lg) {
+				top: 8%;
+				right: 2vw;
+				font-size: 1.2em;
+			}
+	
+			@media (min-width: $xl) {
+				top: 7%;
+				right: 1.5vw;
+				font-size: 1.1em;
+			}
+	
+			@media (min-width: $xxl) {
+				top: 7%;
+				right: 1vw;
+				font-size: 1em;
+			}
+
+			@media (min-width: $desktop) {
+				top: 6%;
+				right: .5vw;
+				font-size: 1.5em;
+			}
+		}
+	}}
+}	
